--- a/Assignments/Assignment-2/prettygreen.html
+++ b/Assignments/Assignment-2/prettygreen.html
@@ -122,6 +122,21 @@
         </div>
     </div>
 </section>
+
+<!-- Spring '25 Campaign Section -->
+<section class="spring-25">
+    <div class="spring-container">
+        <div class="spring-overlay">
+            <h2>SPRING '25</h2>
+            <p>For our Spring 2025 collection, we are looking back to the styles of the 90s worn by British music icons of the era.
+               We headed to the iconic Columbia Hotel in West London to shoot our spring campaign, a spot that is famous for hosting (and
+               permanently banning some) music legends.</p>
+            <a href="#" class="explore-btn">EXPLORE THE CAMPAIGN</a>
+        </div>
+    </div>
+</section>
+
+
 <!-- Footer Section -->
 <footer class="footer">
     <div class="footer-container">
